fixed spacing in the profile section

--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ h2 {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .for-profile {
